Change LoadInfo to only store URL hosts

The WebContentsImpl is the only consumer of this information, and it
only cares about the host.

URLs can be huge (up to 2MB), while hosts are much much smaller.
It isn't a good idea to copy the URL for every outgoing request to
the UI thread every 250ms.

Note: previously this code did some grouping by RVid (I think) before
thread hopping. This would further alleviate copying issues when there
are lots of requests. Probably we could just use two sets:
1. Global frame routing id -> LoadInfo for subresources
2. All navigation requests

Bug: 813445
Change-Id: Ied3709fac7bba079d5e31694dc8e477d1c7f2f68
Reviewed-on: https://chromium-review.googlesource.com/951364
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541189}
Former-commit-id: 911fa064e3cf8c8ab006b39277d01094e05bfdf1